--- a/Lote de Autos/AppShell.xaml
+++ b/Lote de Autos/AppShell.xaml
@@ -3,12 +3,13 @@
     x:Class="Lote_de_Autos.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:views="clr-namespace:Lote_de_Autos.Views"
     xmlns:local="clr-namespace:Lote_de_Autos"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate views:AutosView}"
         Route="MainPage" />
 
 </Shell>
